--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-sass-middleware": "^1.0.1",
     "pug": "2.0.0-beta11",
     "sass": "^1.54.9",
-    "share-buttons": "^1.9.0"
+    "share-buttons": "^1.9.0",
+    "sitemap": "^7.1.1"
   }
 }
