--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-handlebars": "^6.0.6",
+    "express-photo-gallery": "^1.0.9",
+    "handlebars-dateformat": "^1.1.3",
+    "html5-marquee": "^0.2.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
