--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.16.1",
     "express-handlebars": "^6.0.6",
     "express-photo-gallery": "^1.0.9",
+    "express-robots-txt": "^1.0.0",
     "handlebars-dateformat": "^1.1.3",
     "html5-marquee": "^0.2.0",
     "http-errors": "~1.6.3",
