--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "sass-watch": " sass --no-source-map --watch ~/style.scss  ~/stylesheets/style.css"
+    "sass-watch": " sass --no-source-map --watch public/scss/style.scss  public/stylesheets/style.css"
   },
   "dependencies": {
     "ajv": "^8.11.0",
