--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
+    "node-fetch": "^2.6.7",
     "node-sass": "^7.0.3",
     "node-sass-middleware": "^1.0.1",
+    "node-schedule": "^2.1.0",
     "pug": "2.0.0-beta11",
     "sass": "^1.54.9",
     "share-buttons": "^1.9.0",
