--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-sass": "^7.0.3",
     "node-sass-middleware": "^1.0.1",
     "node-schedule": "^2.1.0",
+    "permalinks": "^2.0.0",
     "pug": "2.0.0-beta11",
     "sass": "^1.54.9",
     "share-buttons": "^1.9.0",
